--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,12 @@
 plugins {
     id 'java'
+    id "maven-publish"  // 公開に必要なプラグイン
 }
 
 group 'com.github.korosuke613'
-version '1.0-SNAPSHOT'
+
+// GitHub Action上でタグ名がバージョンとなる
+version = System.getenv("GRADLE_PUBLISH_VERSION") ?: "1.0-SNAPSHOT"
 
 sourceCompatibility = 11
 
@@ -18,4 +21,23 @@ dependencies {
 
 test{
     useJUnitPlatform()
+}
+
+// 公開設定
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/korosuke613/java-plugin-publish-github-example")
+            credentials {
+                username = System.getenv("GITHUB_PACKAGE_USERNAME")
+                password = System.getenv("GITHUB_PACKAGE_TOKEN")
+            }
+        }
+    }
+    publications {
+        gpr(MavenPublication) {
+            from(components.java)
+        }
+    }
 }
