--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,11 @@ publishing {
             }
         }
     }
+    publications {
+        gpr(MavenPublication) {
+            from(components.java)
+        }
+    }
 }
 
 
