--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ repositories {
     mavenCentral()
 }
 
+project.ext {
+    artifactId = 'publish'
+}
+
 dependencies {
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.5.2'
     testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
